; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/wiiuse/extr_wiiuse.c_wiiuse_status.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/wiiuse/extr_wiiuse.c_wiiuse_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wiimote_t = type { i32 }

@WM_CMD_CTRL_STATUS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @wiiuse_status(%struct.wiimote_t* %0, i32 %1) #0 {
  %3 = alloca %struct.wiimote_t*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.wiimote_t* %0, %struct.wiimote_t** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.wiimote_t*, %struct.wiimote_t** %3, align 8
  %7 = icmp ne %struct.wiimote_t* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %2
  %9 = load %struct.wiimote_t*, %struct.wiimote_t** %3, align 8
  %10 = call i32 @WIIMOTE_IS_CONNECTED(%struct.wiimote_t* %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %8, %2
  br label %18

13:                                               ; preds = %8
  store i32 0, i32* %5, align 4
  %14 = load %struct.wiimote_t*, %struct.wiimote_t** %3, align 8
  %15 = load i32, i32* @WM_CMD_CTRL_STATUS, align 4
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @wiiuse_sendcmd(%struct.wiimote_t* %14, i32 %15, i32* %5, i32 1, i32 %16)
  br label %18

18:                                               ; preds = %13, %12
  ret void
}

declare dso_local i32 @WIIMOTE_IS_CONNECTED(%struct.wiimote_t*) #1

declare dso_local i32 @wiiuse_sendcmd(%struct.wiimote_t*, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
